shlink/shlink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-deploy
  namespace: shlink 
spec:
  selector:
    matchLabels:
      app: shlink-deploy
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  shlink-deploy
    spec:
      containers:
      - name:  shlink-pod
        image:  shlinkio/shlink:stable
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8080
          name: shlink-deploy 
      restartPolicy: Always
---
