shlink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink-svc-web
  namespace: shlink
spec:
  selector:
    app: shlink-web
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-svc-api
  namespace: shlink
spec:
  selector:
    app: shlink-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
